# myROOT_analysis_framework

./: .gitattributes  .gitignore  .pylintrc  Makefile  README.md  env-spec.txt  jesal_email.txt  nonfiducial_signal_treatment_reference_note.md  pyproject.toml  pytest.ini  requirements.txt  run_analysis.py  submit.condor  tst.py  unfolding_shadow_bin_full_report_20260619.md
analysis/: analysis.py  config.py  dataclass.py
analysis_save_state/cutfiles/: cutfile_2020-10-14_16-50-01  cutfile_2020-10-16_19-19-35  cutfile_2020-10-19_15-08-28  cutfile_2020-10-23_17-52-28  cutfile_2020-10-23_18-16-52  wpt_cuts_2020-10-29_18-43-30.txt  wpt_cuts_2020-10-29_19-29-12.txt  wpt_cuts_2020-10-29_19-36-23.txt  wpt_cuts_2020-11-01_18-33-03.txt
models/: analysis.py  plotting.py
notebooks/: DTA_output.ipynb  RDataframe_testing.ipynb  ROOT_histogram_test.ipynb  check_sys_consistency.ipynb  check_sys_consistency.ipynb.bak  convert_root_histograms.ipynb  file_io_test.ipynb
options/: cutfile.txt  cutfile_EXAMPLE.txt  cutfile_reco.txt  cutfile_truth.txt  wpt_cuts.txt
options/DTA_cuts/: analysistop.txt  analysistop_full.txt  analysistop_full_dta_cuts.txt  analysistop_full_jesal_cuts.txt  analysistop_peak.txt  analysistop_reco.txt  dta_full.txt  dta_full_dta_cuts.txt  dta_full_e.txt  dta_full_e_mettrig.txt  dta_full_had.txt  dta_full_had_mettrig.txt  dta_full_mu.txt  dta_full_mu_mettrig.txt  dta_init.txt  dta_reco.txt  dta_tau_to_electrons.txt  dta_tau_to_muons.txt  dta_truth.txt  medium_taus.txt  passmettrigger.txt
options/jesal_cutflow/: DY_HM.txt  DY_peak.txt  cutfile_jesal.txt
options/joanna_cutflow/: DY_HM.txt  DY_peak.txt
outputs/LaTeX_cutflow_table/: cutflow_2020-10-18_16-13-43.tex  cutflow_2020-10-18_20-17-44.tex  truth_inclusive_cutflow_2020-11-07_11-02-18.tex  wpt_cuts.txtcutflow_2020-10-30_15-36-32.tex  wpt_cuts.txtcutflow_2020-10-30_15-53-03.tex
outputs/LaTeX_cutflow_table_OLD/: cutflow_2020-10-18_16-13-43.tex  cutflow_2020-10-19_15-08-28.tex  cutflow_2020-10-23_17-45-58.tex  wpt_cuts_cutflow_2020-11-01_21-19-06.tex
outputs/quickscript_outputs/: open_many_files_test.py
quick_scripts/: DTA_out.py  PMGCrossSectionTool_test.py  ROOT_convert_test.py  WpTcuts_plots.py  ami_test.py  binom_error_test.py  control_plots.py  copy_from_nominal.py  cutstring_test.py  fill_times.py  json_test.py  make_dta_test_file.py  manual_analysistop.py  mass_slice_plot_example.py  merge_met_trees.C  merge_met_trees.py  mplhep_bh_weights_test.py  muplot_test.py  open_many_files_test.py  pyROOT_plotfit.py  reco_plot_example.py  roofit_test.py  simple_weight.py  slices.py  snapshot_test.py  test_PMGCrossSectionTool.py  test_hists.py  test_sys_consistency.py  testmlhep.py  uproot_push.py
quick_scripts/RDataFrame stuff/: DTA_out.py  dsid_filtering.py  dta_datasetbuild_script.py  investigate_vector_columns.py  manual_analysistop.py  met_test.py  neutrino_investigation.py  separate files.py  together_with_tchain.py
quick_test_scripts/: ROOT_convert_test.py  WpTcuts_plots.py  mplhep_bh_weights_test.py  muplot_test.py  simple_weight.py  slices.py
run/: analysis_2016.py  analysis_2018.py  analysis_fakes.py  analysis_full.py  analysis_main.ipynb  analysis_main.py  analysis_main_lepfakes.py  analysis_simple.py  analysis_simple_truth.py  analysis_testing.py  analysistop_dsid_split.py  analysistop_plots.py  build_dataset.py  control_plots.py  cuts.py  decay_compare.py  dta_analysis.ipynb  dta_analysis.py  dta_analysistop_compare.py  dta_incoming_quark_study_H.py  dta_incoming_quark_study_L.py  dta_internal_comparisons.py  ex_analysis.py  fakes_estimate.py  jesal_cutflow_analysis.py  mutau_compare.py  mutau_compare_full.py  plot_dta_output.py  reconstruction_efficiency.py  run.sh  run_analysis.py  scale_factors.py  signal_reconstruction.py  single_dataset_test.py  stack_full.py  stack_prelim.py  submit.condor  test_analysis.py  trigger_eff.py  trigger_efficiency.py  (+3 more)
run/2016/: analysis_fakes_2016.py  analysis_simple_2016.py
run/2017/: analysis_fakes_2017.py  analysis_shadow_unfold.py  analysis_simple_2017.py  binnings.py  check_mtw_shadow_categories.py  check_wtaunu_lep_fake_leakage.py  dsid_meta_cache.json  efficiency_and_acceptance.py  samples.py  (+13 more)
src/: WpTcuts.ipynb  WpTcuts_plots.py  analysis.py  config.py  cutfile.py  cutflow.py  cutting.py  dataset.py  datasetbuilder.py  dsid_meta.py  fakes.py  histogram.py  logger.py  muplot_test.py  my_analysis.py  unfolding.py
tests/: conftest.py  test_analysis.py  test_cutfile.py  test_cutfile.txt  test_cutflow.py  test_cutting.py  test_datasetbuilder.py  test_histogram.py  test_plotting.py  test_root_utils.py
utils/: AtlasStyle.py  AtlasUtils.py  PMG_tool.py  ROOT_utils.py  axis_labels.py  binnings.py  context.py  cutfile_utils.py  dataframe_utils.py  decorators.py  dsid_meta.py  file_utils.py  helper_functions.py  phys_vars.py  plotting_tools.py  plotting_utils.py  rootfuncs.h  var_helpers.py  variable_names.py
(+125 files in other folders)
